--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   "cSpell.words": ["openai", "Tavily"],
   "editor.codeActionsOnSave": {
     "source.organizeImports": "always"
-  }
+  },
+  "IDX.aI.enableInlineCompletion": true,
+  "IDX.aI.enableCodebaseIndexing": true
 }
