--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@ai-sdk/groq": "^1.1.6",
     "@ai-sdk/openai": "^1.3.12",
     "@ai-sdk/xai": "^1.1.10",
+    "@google-cloud/speech": "^7.0.1",
+    "@google/generative-ai": "^0.24.0",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
